force-app/main/default/objects/RateCard__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Shipper or Carrier account for this rate card</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <deleteConstraint>SetNull</deleteConstraint>
    <relationshipLabel>Rate Cards</relationshipLabel>
    <relationshipName>RateCards</relationshipName>
    <type>Lookup</type>
</CustomField>