force-app/main/default/objects/RateCard__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this rate card is active and should be used for matching</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>