force-app/main/default/objects/RateCard__c/fields/Base_Rate__c.field-meta.xml
<CustomField>
    <fullName>Base_Rate__c</fullName>
    <description>Base rate amount (flat rate or per-mile rate)</description>
    <label>Base Rate</label>
    <precision>14</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>