force-app/main/default/objects/RateCard__c/fields/Destination_State__c.field-meta.xml
<CustomField>
    <fullName>Destination_State__c</fullName>
    <description>Destination state for rate (e.g., GA). Leave blank for default rate.</description>
    <label>Destination State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>