force-app/main/default/objects/RateCard__c/fields/Origin_State__c.field-meta.xml
<CustomField>
    <fullName>Origin_State__c</fullName>
    <description>Origin state for rate (e.g., OH). Leave blank for default rate.</description>
    <label>Origin State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>