force-app/main/default/objects/RateCard__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <defaultValue>3</defaultValue>
    <description>Priority for matching (1=shipper-specific, 2=contract, 3=default). Lower = higher priority.</description>
    <label>Priority</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>