force-app/main/default/objects/RateCard__c/fields/Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Rate_Type__c</fullName>
    <description>Flat rate ($2000 per load) or Per-mile rate ($1.50/mi)</description>
    <label>Rate Type</label>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Flat_Rate</fullName><default>true</default><label>Flat Rate</label></value>
            <value><fullName>Per_Mile</fullName><default>false</default><label>Per Mile</label></value>
            <value><fullName>Minimum_Charge</fullName><default>false</default><label>Minimum Charge</label></value>
        </valueSetDefinition>
    </valueSet>
    <required>true</required>
    <type>Picklist</type>
</CustomField>